--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,8 @@ name: INFRA - plan - NONPROD
 run-name: Validate Infra 
 on:
   pull_request:
+    paths:
+    - 'infra/*/*/*.tf'
 
 permissions:
   id-token: write
@@ -16,36 +18,29 @@ jobs:
 
   locate_tf_file:
     name: Find where do you plan
-    runs-on: ["linux"]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
       - id: check_app_env
         name: Match env with app
         run: |
-          find ./infra -path './infra/_sharedservices' -prune -o -type f -name "*.tf" -print
-
-  call_terraform_router_shared_services:
-    name: Terraform Router
-    needs: locate_tf_file
-    steps:
-      - uses: actions/checkout@v4
-
-      - id: test_file
-        name: Test file
-        run: |
-          ls ./infra/_sharedservices
+          dirs=$(find ./infra -path './infra/_sharedservices' -prune -o -type f -name "*.tf" -exec dirname {} \;)
+          matrix=$(echo "$dirs" | awk -F'/' '{printf("{\"environment\": \"%s\", \"scope\": \"%s\"}\n", $4, $3)}' | jq -c -s '.')
+          echo "myoutput=$matrix" >> $GITHUB_OUTPUT
+    outputs:
+      mymatrix: ${{ steps.check_app_env.outputs.myoutput }}
 
   call_terraform_router:
     name: Terraform Router
+    runs-on: ubuntu-latest
     needs: locate_tf_file
     strategy:
       matrix:
-        target: [dev, qa, prod]
+        infra: ${{ fromJson(needs.locate_tf_file.outputs.mymatrix) }}
     steps:
       - uses: actions/checkout@v4
 
       - id: test_file
         name: Test file
-        run: |
-          ls ./infra/${{matrix.target}}
+        run: ls infra/${{ matrix.infra.scope }}/${{ matrix.infra.env }}
