--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           DEFAULT_BRANCH=$(LANG=C git remote show origin | grep 'HEAD branch:' | awk '{print $NF}')
           BASE=$(git merge-base origin/$DEFAULT_BRANCH HEAD)
-          dirs=$(dirname $(git diff --name-only $BASE HEAD | grep 'infra' | grep '\.tf') | sort | uniq)
+          dirs=$(dirname $(git diff --name-only $BASE HEAD | grep 'infra' | grep -v 'infra/_sharedservices/' | grep '\.tf') | sort | uniq)
           matrix=$(echo "$dirs" | awk -F'/' '{printf("{\"environment\": \"%s\", \"scope\": \"%s\"}\n", $3, $2)}' | jq -c -s '.')
           echo "myoutput=$matrix" >> $GITHUB_OUTPUT
     outputs:
