--- a/.github/workflows/sharedservices.yml
+++ b/.github/workflows/sharedservices.yml
@@ -17,11 +17,9 @@ concurrency:
 jobs:
   call_terraform_router:
     name: Terraform Router
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - id: test_file
-        name: Test file
-        run: |
-          ls ./infra/_sharedservices
+    uses: littlejo/github-action-test/.github/workflows/action.yaml@toto-test
+    with:
+      scope: "sharedservices"
+      environment: "na"
+      action: "plan"
+    secrets: inherit
