--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,6 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-
   locate_tf_file:
     name: Find where do you plan
     runs-on: ubuntu-latest
@@ -37,14 +36,13 @@ jobs:
 
   call_terraform_router:
     name: Terraform Router
-    runs-on: ubuntu-latest
+    uses: littlejo/github-action-test/.github/workflows/action.yaml@toto-test
     needs: locate_tf_file
     strategy:
       matrix:
         infra: ${{ fromJson(needs.locate_tf_file.outputs.mymatrix) }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - id: test_file
-        name: Test file
-        run: ls infra/${{ matrix.infra.scope }}/${{ matrix.infra.env }}
+    with:
+      scope: ${{ matrix.infra.scope }}
+      environment: ${{ matrix.infra.environment }}
+      action: "plan"
+    secrets: inherit
