fixup! Improve github action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
 
   call_terraform_router:
     name: Terraform Router
-    uses: littlejo/github-action-test/.github/workflows/action.yaml@toto-test
+    uses: littlejo/github-action-test/.github/workflows/action.yaml@main
     needs: locate_tf_file
     strategy:
       matrix:
