--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -81,3 +81,9 @@ jobs:
 
     - name: Run TFLint
       run: tflint -f compact
+
+    - name: Terraform Format
+      run: terraform fmt -check
+
+    - name: Terraform Plan
+      run: terraform plan -input=false
