--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -61,7 +61,7 @@ jobs:
       run: terraform fmt -check
 
     - name: Terraform Plan
-      run: terraform plan -input=false -out=out.tf
+      run: terraform plan -input=false -out=out
 
     - uses: terraform-linters/setup-tflint@v4
       name: Setup TFLint
