--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -81,16 +81,29 @@ jobs:
       run: terraform plan -input=false -out=out
       if: steps.check-directory.outputs.DIR_EXIST == 'true'
 
-    - uses: terraform-linters/setup-tflint@v4
-      name: Setup TFLint
-      with:
-        tflint_version: v0.52.0
-      if: steps.check-directory.outputs.DIR_EXIST == 'true'
-
     - name: Setup OPA
       uses: open-policy-agent/setup-opa@v2
       with:
         version: latest
+      if: steps.check-directory.outputs.DIR_EXIST == 'true'
+
+    - name: Retrieve tfstate json
+      run: terraform show -json out | jq > /tmp/out.json
+      if: steps.check-directory.outputs.DIR_EXIST == 'true'
+
+    - name: Check rego
+      run: |
+           for d in $(cat decisions.txt)
+           do
+               opa exec --decision $d --bundle rego/ /tmp/out.json --fail-non-empty
+           done
+      working-directory: ${{ github.workspace }}
+      if: steps.check-directory.outputs.DIR_EXIST == 'true'
+
+    - uses: terraform-linters/setup-tflint@v4
+      name: Setup TFLint
+      with:
+        tflint_version: v0.52.0
       if: steps.check-directory.outputs.DIR_EXIST == 'true'
 
     - name: Init TFLint
@@ -102,12 +115,4 @@ jobs:
 
     - name: Run TFLint
       run: tflint -f compact
-      if: steps.check-directory.outputs.DIR_EXIST == 'true'
-
-    - name: Terraform Format
-      run: terraform fmt -check
-      if: steps.check-directory.outputs.DIR_EXIST == 'true'
-
-    - name: Terraform Plan
-      run: terraform plan -input=false
       if: steps.check-directory.outputs.DIR_EXIST == 'true'
